2015-11-02 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Cleanups and NSInteger conversion.

	* Modules/Editors/ProjectCenter/LineJumper.h
	* Modules/Editors/ProjectCenter/LineJumper.m
	declare missing method

2015-06-16 Riccardo Mottola <rm@gnu.org>

	* Framework/GNUmakefile
	* Framework/PCFileCreator.m
	* Headers/ProjectCenter/PCFileCreator.h
	* Framework/Resources/ocppclass.template
	Enable project addition of obj-c++ classes.

2015-06-13 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectEditor.m
	Re-enable wrongly uncommented statement.

	* Framework/PCEditorManager.m
	If we have a directory, we check if it is a bundle that an app can open it and open it through NSWorkspace.

2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Enable parsing of obj-c++

2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/Resources/Info.table
	Enable Obj-C++ extension.

	* Framework/PCEditorManager.m
	Use the internal editor if it is available, even if no parser is available.

	* Modules/Editors/ProjectCenter/PCEditor.m
	Handle missing image better.

2015-04-07 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Use constants and not strings as keys.

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	Use console font for the view.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Use Preferences color methods.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h
	* PCPrefController.m
	Direct preferences method for setting and getting colors.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Convert CMYK to RGB before serializing.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Actually use the background color preference.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h