@@ -94,7 +94,7 @@ cleanup(NSMutableDictionary *m, NSString *k)
   // Help text view
   [helpText setDrawsBackground:NO];
   [helpText setTextColor:[NSColor darkGrayColor]];
-  [helpText setFont:[NSFont systemFontOfSize:11.0]];
+  [helpText setFont:[NSFont systemFontOfSize:10.0]];
   [helpText setText:@"Click on the field and drop file in the box above"];
 
   // Document types buttons
@@ -133,7 +133,7 @@ cleanup(NSMutableDictionary *m, NSString *k)
 // --- Actions
 // ----------------------------------------------------------------------------
 
-- (void)setAppType:(id)sender
+- (IBAction)setAppType:(id)sender
 {
   NSString       *appType = [appTypeField stringValue];
   NSMutableArray *libs = [[projectDict objectForKey:PCLibraries] mutableCopy];
@@ -152,10 +152,17 @@ cleanup(NSMutableDictionary *m, NSString *k)
   [self setProjectDictObject:appType forKey:PCAppType notify:YES];
 }
 
-- (void)setAppClass:(id)sender
+- (IBAction)setAppClass:(id)sender
 {
   [self setProjectDictObject:[appClassField stringValue]
                       forKey:PCPrincipalClass
+		      notify:YES];
+}
+
+- (IBAction)setBundleIdentifier:(id)sender
+{
+  [self setProjectDictObject:[bundleIdentifierField stringValue]
+                      forKey:PCBundleIdentifier
 		      notify:YES];
 }
 
@@ -556,6 +563,7 @@ cleanup(NSMutableDictionary *m, NSString *k)
   // Project Attributes view
   [appTypeField selectItemWithTitle:[projectDict objectForKey:PCAppType]];
   [appClassField setStringValue:[projectDict objectForKey: PCPrincipalClass]];
+  [bundleIdentifierField setStringValue:[projectDict objectForKey: PCBundleIdentifier]];
 
   [appImageField setStringValue:[projectDict objectForKey:PCAppIcon]];
   [helpFileField setStringValue:[projectDict objectForKey:PCHelpFile]];
