@@ -2,11 +2,15 @@
     "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
+	    "clearAppIcon:",
 	    "clearFile:",
+	    "clearHelpFile:",
+	    "clearMainNib:",
 	    "docFieldSet:",
-	    "setAppType:",
 	    "removeDocType:",
 	    "setAppClass:",
+	    "setAppType:",
+	    "setBundleIdentifier:",
 	    "setDocBasedApp:",
 	    "setDocIcon:",
 	    "setFile:",
@@ -16,31 +20,30 @@
     };
     PCAppProject = {
 	Actions = (
+	    "clearAppIcon:",
+	    "clearHelpFile:",
+	    "clearMainNib:",
 	    "setAppClass:",
-	    "setFile:",
-	    "clearFile:",
-	    "addDocType:",
-	    "removeDocType:",
-	    "setCurrentLanguage:",
-	    "showDocTypesPanel:",
-	    "setDocBasedApp:",
-	    "docFieldSet:",
-	    "setAppType:"
+	    "setAppType:",
+	    "setBundleIdentifier:",
+	    "setDocBasedApp:"
 	);
 	Outlets = (
 	    projectAttributesView,
+	    appTypeField,
 	    appClassField,
-	    iconView,
-	    setFieldButton,
-	    clearFieldButton,
 	    appImageField,
 	    helpFileField,
 	    mainNIBField,
+	    bundleIdentifierField,
+	    helpText,
+	    iconView,
 	    docTypesButton,
 	    docTypesPanel,
 	    addDocTypeButton,
 	    removeDocTypeButton,
 	    docBasedAppButton,
+	    docTypesScroll,
 	    docTypeLabel,
 	    docTypeField,
 	    docNameLabel,
@@ -52,18 +55,9 @@
 	    docRoleLabel,
 	    docRoleField,
 	    docClassLabel,
-	    docClassField,
-	    docTypesList,
-	    typeColumn,
-	    nameColumn,
-	    extensionsColumn,
-	    iconColumn,
-	    roleColumn,
-	    classColumn,
-	    appTypeField,
-	    helpText
+	    docClassField
 	);
-	Super = NSObject;
+	Super = PCProject;
     };
     PCAppTextField = {
 	Actions = (
@@ -78,5 +72,12 @@
 	Outlets = (
 	);
 	Super = NSImageView;
+    };
+    PCProject = {
+	Actions = (
+	);
+	Outlets = (
+	);
+	Super = NSObject;
     };
 }
